--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -44,7 +44,8 @@ jobs:
           GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
           XIMERA_URL: ${{ vars.XIMERA_URL }}
           XIMERA_NAME: ${{ vars.XIMERA_NAME }}*${{ github.ref_name }}
-          XMLATEX_OPTIONS: ${{ vars.XMLATEX_OPTIONS }}
+          # XMLATEX_OPTIONS: ${{ vars.XMLATEX_OPTIONS }}
+          XMLATEX_OPTIONS: "-j 4 -f"
         run: |
           ls -alrt
           # git config --global --add safe.directory "$(pwd)"
