--- a/.ximera_local/ximera.cfg
+++ b/.ximera_local/ximera.cfg
@@ -32,10 +32,87 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\Preamble{xhtml,mathjax}
+\Preamble{xhtml,mathjax,minipage-width}
 
 \NoFonts
 
+% storage for collected CSS
+%%%\newtoks\MycssToks
+%%%\def\Mycss#1{\MycssToks=\expandafter{\the\MycssToks #1^^J}}
+%%%
+%%%% helper to write out the CSS contents
+%%%\def\WriteMyCss{AAAA \expandafter\HCode{BBB\the\MycssToks}}
+%%%
+%%%\Configure{HTML}{}%
+%%%   {\HCode{<div class="mycss"><style type="text/css">}%
+%%%    \WriteMyCss \textbf{brol}
+%%%    \HCode{</style></div>}%
+%%%   }
+%%%
+\makeatletter
+
+
+%--- open output file for collected CSS
+\newwrite\mycss@out
+\immediate\openout\mycss@out=\jobname.xmcss
+
+% \Mycss{ ... } : appends a line to \jobname.mycss
+% Important: we temporarily make % an ordinary character so "50%" is preserved.
+\def\Mycss{\begingroup\catcode`\%=12 \mycss@grab}
+
+\long\def\mycss@grab#1{%
+  \begingroup
+    \immediate\write\mycss@out{#1}%
+  \endgroup
+  \endgroup
+}
+
+% Hook: put it at the very end of each HTML file TeX4ht writes
+%%% \Configure{HTML}{}{\mycss@include}
+
+% optional: close the stream at the very end of the TeX job
+%%% \AtEndDocument{\immediate\closeout\mycss@out}
+
+
+% we must refer to minipage from the css file, because tags are beeing
+% written before we know dimensions
+\newcount\mini@count
+\ExplSyntaxOn
+% save original minipage
+\let\oldiimini\@iiiminipage
+% redefine minipage
+\def\@iiiminipage#1#2[#3]#4{%
+  % calculate minipage dimensions and save it to the CSS file
+  \Mycss{\#minipage\the\mini@count{width:\fp_eval:n{#4/\textwidth*100}\%;}}%
+  \global\advance\mini@count by 1\relax%
+  \oldiimini{#1}{#2}[#3]{#4}%
+}
+
+\ExplSyntaxOff
+
+\ConfigureEnv{image}{%
+  \ifvmode \IgnorePar\fi \EndP%
+  \HCode{<div class="image-environment" role="img" aria-labelledby="image-alt-\arabic{imagealt}">}%
+}{\HCode{</div>}}{}{}
+
+\ConfigureEnv{minipage}{\ifvmode\IgnorePar\fi\EndP\HCode{<div class="minipage" id="minipage\the\mini@count">}}
+{\ifvmode\IgnorePar\fi\EndP\HCode{</div>\Hnewline}%
+}{}{}
+
+\makeatother
+
+\Css{div.minipage {
+ float: left; 
+ } 
+}
+
+\Css{div.minipage:last-child {
+ clear: none; 
+ float: right; 
+ }
+}
+
+\Css{ div.minipage + :not(.minipage) {clear:both;overflow:auto;width:100\%;}}
 
 
 
