--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -45,7 +45,7 @@ jobs:
           XIMERA_URL: ${{ vars.XIMERA_URL }}
           XIMERA_NAME: ${{ vars.XIMERA_NAME }}*${{ github.ref_name }}
           # XMLATEX_OPTIONS: ${{ vars.XMLATEX_OPTIONS }}
-          XMLATEX_OPTIONS: "Oef*.tex -j 4 -f"
+          XMLATEX_OPTIONS: "*tex  -j 4 -f"
         run: |
           ls -alrt
           # git config --global --add safe.directory "$(pwd)"
