--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -50,6 +50,7 @@ jobs:
           ls -alrt
           # git config --global --add safe.directory "$(pwd)"
           # export COMMAND=./xmScripts/xmlatex.test
+          ./xmScripts/xmlatex bake --compile pdf -f $XMLATEX_OPTIONS
           ./xmScripts/xmlatex ghaction $XMLATEX_OPTIONS || echo NOK
           ./xmScripts/xmlatex serve $XMLATEX_OPTIONS
           echo "✅ Published to $XIMERA_URL$XIMERA_NAME " >> $GITHUB_STEP_SUMMARY
