--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -50,9 +50,9 @@ jobs:
           ls -alrt
           # git config --global --add safe.directory "$(pwd)"
           # export COMMAND=./xmScripts/xmlatex.test
-
-          ./xmScripts/xmlatex bake --compile pdf -f $XMLATEX_OPTIONS
-          ./xmScripts/xmlatex ghaction $XMLATEX_OPTIONS || echo NOK
+          rm -rf ximera-downloads/with-answers
+          ./xmScripts/xmlatex bake --compile handout.pdf -f $XMLATEX_OPTIONS
+          ./xmScripts/xmlatex ghaction --compile handout.pdf,html $XMLATEX_OPTIONS || echo NOK
           ./xmScripts/xmlatex serve $XMLATEX_OPTIONS
           echo "✅ Published to $XIMERA_URL$XIMERA_NAME " >> $GITHUB_STEP_SUMMARY
 
