--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -45,15 +45,13 @@ jobs:
           XIMERA_URL: ${{ vars.XIMERA_URL }}
           XIMERA_NAME: ${{ vars.XIMERA_NAME }}*${{ github.ref_name }}
           # XMLATEX_OPTIONS: ${{ vars.XMLATEX_OPTIONS }}
-          XMLATEX_OPTIONS: "-j 4 -f"
+          XMLATEX_OPTIONS: "-j 4"
         run: |
           ls -alrt
           # git config --global --add safe.directory "$(pwd)"
           # export COMMAND=./xmScripts/xmlatex.test
-          rm -rf ximera-downloads/with-answers
-          ./xmScripts/xmlatex bake --compile handout.pdf -f $XMLATEX_OPTIONS
-          ./xmScripts/xmlatex ghaction --compile handout.pdf,html $XMLATEX_OPTIONS || echo NOK
-          ./xmScripts/xmlatex serve $XMLATEX_OPTIONS
+          ./xmScripts/xmlatex bake --compile handout.pdf $XMLATEX_OPTIONS || echo NOK
+          ./xmScripts/xmlatex all $XMLATEX_OPTIONS
           echo "✅ Published to $XIMERA_URL$XIMERA_NAME " >> $GITHUB_STEP_SUMMARY
 
       - name: Setup ximera serve cache (only .git)
