Update build (also in .ximera_local !!!)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,16 +22,15 @@
         {
             "label": "HTML",
             "args": [
-                "ghaction",
+                "htmltask",
                 "--force",
-                "--compile html",
                 "${relativeFile}"
             ],
         },
         {
             "label": "SERVE",
             "args": [
-                "ghaction",
+                "servetask",
             ],
         },
         {
