--- a/.github/workflows/serve-ximera-new.yml
+++ b/.github/workflows/serve-ximera-new.yml
@@ -68,8 +68,8 @@ jobs:
           ls -al /usr/local/bin
           ls -al /root/texmf/tex/latex
           find  /root/texmf
-          xmlatex -d bake --compile pdfexport  -j 5 $XM_TO_PROCESS
-          xmlatex -d bake --compile htmlexport -j 5 $XM_TO_PROCESS
+          xmlatex bake -d --compile pdfexport  -j 5 $XM_TO_PROCESS
+          xmlatex bake -d --compile htmlexport -j 5 $XM_TO_PROCESS
 
       # Save cache
       - name: "Postprocess: Save cache"
