--- a/.github/workflows/serve-ximera-new.yml
+++ b/.github/workflows/serve-ximera-new.yml
@@ -61,6 +61,11 @@ jobs:
       - name: "XIMERA: pdf and html (tikzexternalize/html)"
         run: |
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          .ximera_local/xmScripts/xmlatex bake veryclean  -j 5 $XM_TO_PROCESS
+          rm -rf */*/tikz
+          rm -rf */*/build
+          rm -rf */*/xmPictures
+          find 6dejaar/kinematica
           .ximera_local/xmScripts/xmlatex bake -t --compile pdfexport  -j 5 $XM_TO_PROCESS
           .ximera_local/xmScripts/xmlatex bake -t --compile htmlexport -j 5 $XM_TO_PROCESS
           .ximera_local/xmScripts/xmlatex bake -t --compile handout.pdf -f -j 5 $XM_TO_PROCESS
