--- a/.github/workflows/serve-ximera-new.yml
+++ b/.github/workflows/serve-ximera-new.yml
@@ -10,7 +10,7 @@ env:
   GPG_KEY: ${{ secrets.GPG_KEY }}
   GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
   XIMERA_URL: ${{ vars.XIMERA_URL }}
-  XIMERA_NAME: ${{ vars.XIMERA_NAME }}*${{ github.ref_name }}*wim
+  XIMERA_NAME: ${{ vars.XIMERA_NAME }}*${{ github.ref_name }}
   XM_TO_PROCESS: "."
   # XM_TO_PROCESS: "test.tex spc/basisbegrippen.tex"
   #XM_TO_PROCESS: "6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex"
@@ -141,6 +141,7 @@ jobs:
     name: Run serve for public version
     needs: serve-ximera-preview
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'  
     continue-on-error: true
     # container: *x-container
     container:
@@ -165,11 +166,10 @@ jobs:
 
       - name: "XIMERA BUILD: Serve to ximeraserver (to public URL)"
         env:
-          XIMERA_NAME: ${{ vars.XIMERA_NAME }}*wim          
+          XIMERA_NAME: ${{ vars.XIMERA_NAME }}      
         run: |
           echo "Serving to $XIMERA_URL$XIMERA_NAME"
-          git config --global --add safe.directory /__w/calculus/calculus
-          export TEXMFHOME=/root/texmf
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"          
           xmlatex name
           xmlatex serve -t $XM_TO_PROCESS
           # echo "Recent git log:"
