--- a/.github/workflows/serve-ximera-new.yml
+++ b/.github/workflows/serve-ximera-new.yml
@@ -51,11 +51,11 @@ jobs:
             !.git/**
             !.github/**
           key: ximeraPDFexport-${{ github.ref_name }}-${{ github.run_id }}
-          restore-keys: |
-            ximeraHTMLexport-${{ github.ref_name }}-
-            ximeraPDFexport-${{ github.ref_name }}-
-            ximeraHTMLexport-
-            ximeraPDFexport-
+          # restore-keys: |
+          #   ximeraHTMLexport-${{ github.ref_name }}-
+          #   ximeraPDFexport-${{ github.ref_name }}-
+          #   ximeraHTMLexport-
+          #   ximeraPDFexport-
 
       - name: "XIMERA: pdf and html (tikzexternalize/html)"
         run: |
