--- a/.github/workflows/serve-ximera-new.yml
+++ b/.github/workflows/serve-ximera-new.yml
@@ -11,7 +11,7 @@ env:
   XIMERA_URL: ${{ vars.XIMERA_URL }}
   XIMERA_NAME: ${{ vars.XIMERA_NAME }}*${{ github.ref_name }}
   # XM_TO_PROCESS: "."
-  XM_TO_PROCESS: "test.tex SPC/vectoren.tex SPC/kinematica_1dim.tex"
+  XM_TO_PROCESS: "test.tex SPC/vectoren.tex SPC/kinematica_basis.tex SPC/kinematica_1dim.tex"
 
 jobs:
   build-ximera-htmlexport:
