--- a/.github/workflows/serve-ximera-new.yml
+++ b/.github/workflows/serve-ximera-new.yml
@@ -51,10 +51,10 @@ jobs:
             !.github/**
           key: ximeraPDFexport-${{ github.ref_name }}-${{ github.run_id }}
           restore-keys: |
-            ximeraHTMLexport-${{ github.ref_name }}-
-            ximeraPDFexport-${{ github.ref_name }}-
-            ximeraHTMLexport-
-            ximeraPDFexport-
+            # ximeraHTMLexport-${{ github.ref_name }}-
+            # ximeraPDFexport-${{ github.ref_name }}-
+            # ximeraHTMLexport-
+            # ximeraPDFexport-
 
       - name: "XIMERA: pdf and html (tikzexternalize/html)"
         run: |
@@ -64,6 +64,8 @@ jobs:
           ls -alR kinematica
           rm -rf */*/build
           rm -rf */*/xmPictures
+          rm -rf */build
+          rm -rf */xmPictures
           echo "START"
           xmlatex bake --compile pdfexport  -j 5 $XM_TO_PROCESS
           xmlatex bake --compile htmlexport -j 5 $XM_TO_PROCESS
