--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -72,7 +72,10 @@ jobs:
           xmlatex bake --compile htmlexport -j 5 $XM_TO_PROCESS
           xmlatex bake --compile handout.pdf -f -j 5 $XM_TO_PROCESS
           xmlatex frost $XM_TO_PROCESS || echo "FROST FAILED"
-          ls -alR
+          xmlatex name
+          xmlatex serve $XM_TO_PROCESS
+
+          # ls -alR
           # rm -rf */*/build
           # rm -rf */*/xmPictures
           # rm -rf */build
@@ -133,7 +136,7 @@ jobs:
           echo "Serving to $XIMERA_URL$XIMERA_NAME"
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
           xmlatex name
-          # xmlatex frost $XM_TO_PROCESS   ### DONE ABOVE
+          xmlatex frost $XM_TO_PROCESS   ### DONE ABOVE
           xmlatex serve $XM_TO_PROCESS
           echo "✅ Published to $XIMERA_URL$XIMERA_NAME "
           echo "✅ Published to $XIMERA_URL$XIMERA_NAME " >> $GITHUB_STEP_SUMMARY
