--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -52,10 +52,10 @@ jobs:
             !.github/**
           key: ximeraPDFexport-${{ github.ref_name }}-${{ github.run_id }}
           restore-keys: |
-            # ximeraHTMLexport-${{ github.ref_name }}-
-            # ximeraPDFexport-${{ github.ref_name }}-
-            # ximeraHTMLexport-
-            # ximeraPDFexport-
+            ximeraHTMLexport-${{ github.ref_name }}-
+            ximeraPDFexport-${{ github.ref_name }}-
+            ximeraHTMLexport-
+            ximeraPDFexport-
 
       - name: "XIMERA: pdf and html (tikzexternalize/html)"
         run: |
@@ -70,7 +70,9 @@ jobs:
           echo "START"
           xmlatex bake --compile pdfexport  -j 5 $XM_TO_PROCESS
           xmlatex bake --compile htmlexport -j 5 $XM_TO_PROCESS
-          xmlatex bake --compile handout.pdf -f -j 5 $XM_TO_PROCESS
+          xmlatex bake --compile handout.pdf -j 5 $XM_TO_PROCESS
+          xmlatex bake --compile handout.pdf -f -j 3 --nodependencies $XM_TO_PROCESS   # voor TOC
+          rm -rf ximera-download/pdfexport
           xmlatex frost $XM_TO_PROCESS || echo "FROST FAILED"
           xmlatex name
           xmlatex serve $XM_TO_PROCESS
