--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -47,20 +47,21 @@ jobs:
             **/*.xref
             **/*.svg
             **/*.png
+            **/*.jpg
             **/*.xbb
             !.git/**
             !.github/**
           key: ximeraPDFexport-${{ github.ref_name }}-${{ github.run_id }}
           restore-keys: |
-            ximeraHTMLexport-${{ github.ref_name }}-
-            ximeraPDFexport-${{ github.ref_name }}-
-            ximeraHTMLexport-
-            ximeraPDFexport-
+            # ximeraHTMLexport-${{ github.ref_name }}-
+            # ximeraPDFexport-${{ github.ref_name }}-
+            # ximeraHTMLexport-
+            # ximeraPDFexport-
 
       - name: "XIMERA: pdf and html (tikzexternalize/html)"
         run: |
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
-          # xmlatex veryclean  -j 5 $XM_TO_PROCESS
+          xmlatex veryclean  -j 5 $XM_TO_PROCESS
           # echo "kinematica:"
           # ls -alR kinematica
           # rm -rf */*/build
@@ -96,6 +97,7 @@ jobs:
             **/*.xref
             **/*.svg
             **/*.png
+            **/*.jpg
             **/*.xbb
             !.git/**
             !.github/**
