--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -54,8 +54,8 @@ jobs:
           restore-keys: |
             # ximeraHTMLexport-${{ github.ref_name }}-
             # ximeraPDFexport-${{ github.ref_name }}-
-            # ximeraHTMLexport-main-
-            # ximeraPDFexport-main-
+            # ximeraHTMLexport-
+            # ximeraPDFexport-
 
       - name: "XIMERA: pdf and html (tikzexternalize/html)"
         run: |
