--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -12,7 +12,7 @@ env:
   XIMERA_NAME: ${{ vars.XIMERA_NAME }}*${{ github.ref_name }}
   # XM_TO_PROCESS: "."
   # XM_TO_PROCESS: "test.tex SPC/vectoren.tex SPC/kinematica_basis.tex SPC/kinematica_1dim.tex"
-  XM_TO_PROCESS: "test.tex SPC/kinematica_*.tex"
+  XM_TO_PROCESS: "test.tex SPC/kinematica_*.tex/SPC/semester1.tex"
 
 jobs:
   build-ximera-htmlexport:
